force-app/main/default/objects/GTM_Migration_Platform__mdt/GTM_Migration_Platform__mdt.object-meta.xml
<CustomObject>
    <label>GTM Migration Platform</label>
    <pluralLabel>GTM Migration Platforms</pluralLabel>
</CustomObject>