force-app/main/default/objects/GTM_Migration_Platform__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive platforms are ignored by the resolver, so retiring one does not require deleting the record and losing its aliases.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>