force-app/main/default/objects/GTM_Migration_Platform__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <description>How the platform is named to a human, e.g. "Salesforce Marketing Cloud Engagement". Used in the advisory reason so a rep sees the platform the prospect actually named.</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>