force-app/main/default/objects/GTM_Migration_Platform__mdt/fields/Family_Key__c.field-meta.xml
<CustomField>
    <fullName>Family_Key__c</fullName>
    <label>Family Key</label>
    <description>Optional grouping key shared by platforms that behave alike for assessment purposes, e.g. hubspot and marketo both sitting in inbound_suite. It is the second link in the instrument&#x27;s resolution chain (exact pair, then source-family x target, then target-only, then base), so a family-level pack can say the true thing about several sources at once without anyone copying a pack per platform. Purely additive: a platform with no family simply skips that link.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>