force-app/main/default/objects/GTM_Migration_Platform__mdt/fields/Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>Platform_Key__c</fullName>
    <label>Platform Key</label>
    <description>Canonical machine key for the platform, e.g. eloqua, sfmc, sfmc_next. This is what GTM_Migration_Pair__mdt joins on.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>